@@ -18,6 +18,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - <label> tags have been added around most check boxes and radio buttons
+      and their text labels in the admin and admindb web GUI so they can be
+      (de)selected by clicking the text.  (LP: #266391)
+
     - If checking DNS for dmarc_moderation_action and DNS lookup is not
       available, log it.  (LP: #1324541)
  
